--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,15 @@ plugins {
 	id 'java'
 }
 
-group = 'G03'
+group = 'com.dds'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
+	maven {
+		url 'https://maven.scijava.org/content/repositories/public/'
+	}
 }
 
 dependencies {
