--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,19 @@ dependencies {
 	implementation 'com.github.bft-smart:library:1.2'
 	implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
 	implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
-	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+apply plugin: 'idea'
+
+idea {
+	module {
+		downloadJavadoc = true
+		downloadSources = true
+	}
 }
