--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ repositories {
 	}
 }
 
+tasks.named("jar") {
+	enabled = false
+}
+
 dependencies {
 	implementation 'com.github.bft-smart:library:1.2'
 	implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
