--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,10 @@ dependencies {
 	implementation 'io.netty:netty-all:4.1.75.Final'
 	// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
 	implementation 'org.slf4j:slf4j-api:1.7.36'
+	implementation 'site.ycsb:core:0.17.0'
+
+
+
 }
 
 tasks.named('test') {
