--- a/src/main/resources/application-all.properties
+++ b/src/main/resources/application-all.properties
@@ -15,4 +15,6 @@ server.ssl.enabled-protocols=TLSv1.3
 # Service
 service.enabled=true
 ## BFT
-#bftsmart.enabled=true
+bftsmart.enabled=true
+# Persistence
+persistence.plane=memory
