Rename BFTSMaRt related classes
Fix dependencies

--- a/src/main/resources/application-all.properties
+++ b/src/main/resources/application-all.properties
@@ -14,7 +14,7 @@ server.ssl.protocol=TLS
 server.ssl.enabled-protocols=TLSv1.3
 # Service
 service.enabled=true
-## BFT
+# BFT
 bftsmart.enabled=true
 # Persistence
 persistence.plane=memory
