--- a/src/main/resources/application-endorser.properties
+++ b/src/main/resources/application-endorser.properties
@@ -12,11 +12,5 @@ server.ssl.key-store-password=${KEYSTORE_PASSWORD}
 server.ssl.protocol=TLS
 # Enabled SSL protocols
 server.ssl.enabled-protocols=TLSv1.3
-# Service
-service.enabled=true
-# BFT
-bftsmart.enabled=true
-# Persistence
-persistence.plane=memory
-# Endorser
-endorser=false
+
+endorser=true
