Remove leftover dependency in AppService

--- a/src/main/resources/application-endorser.properties
+++ b/src/main/resources/application-endorser.properties
@@ -12,4 +12,5 @@ server.ssl.key-store-password=${KEYSTORE_PASSWORD}
 server.ssl.protocol=TLS
 # Enabled SSL protocols
 server.ssl.enabled-protocols=TLSv1.3
+# Endorser
 endorser=true
