--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - REDIS_PORT=6379
       - REPLICA_ID=0
       - PORT=8080
-      - SPRING_PROFILES_ACTIVE=service,redis
+      - SPRING_PROFILES_ACTIVE=service,redis,tls
     networks:
       dds-network:
         ipv4_address: 172.26.0.20
@@ -57,7 +57,7 @@ services:
       - REDIS_PORT=6380
       - REPLICA_ID=1
       - PORT=8081
-      - SPRING_PROFILES_ACTIVE=service,redis
+      - SPRING_PROFILES_ACTIVE=service,redis,tls
     networks:
       dds-network:
         ipv4_address: 172.26.0.30
@@ -94,7 +94,7 @@ services:
       - REDIS_PORT=6381
       - REPLICA_ID=2
       - PORT=8082
-      - SPRING_PROFILES_ACTIVE=service,redis
+      - SPRING_PROFILES_ACTIVE=service,redis,tls
     networks:
       dds-network:
         ipv4_address: 172.26.0.40
@@ -131,7 +131,7 @@ services:
       - REDIS_PORT=6382
       - REPLICA_ID=3
       - PORT=8083
-      - SPRING_PROFILES_ACTIVE=service,redis
+      - SPRING_PROFILES_ACTIVE=service,redis,tls
     networks:
       dds-network:
         ipv4_address: 172.26.0.50
