--- a/DockerfileEndorser
+++ b/DockerfileEndorser
@@ -5,8 +5,8 @@ RUN gradle build -x test --no-daemon
 
 FROM openjdk:17
 ENV TLS_KEYSTORE_PASSWORD=dds-it-dlp
-ENV SERVER_KEYSTORE=config/keystores/serverKeystore SERVER_KEYSTORE_ALIAS=appservice SERVER_KEYSTORE_PW=ddsdds
-ENV ENDORSERS_KEYSTORE=config/keystores/publicEndorsersKeystore ENDORSERS_KEYSTORE_ALIAS=endorser ENDORSERS_KEYSTORE_PW=ddsdds
+ENV SERVER_KEYSTORE=config/keystores/endorserKeystore SERVER_KEYSTORE_ALIAS=endorser SERVER_KEYSTORE_PW=ddsdds
+ENV _JAVA_OPTIONS="-Xms16M -Xmx32M"
 COPY --from=build /home/gradle/src/build/libs/*.jar app.jar
 COPY config config
 COPY config/hosts-docker.config config/hosts.config
