--- a/src/main/resources/application-all.properties
+++ b/src/main/resources/application-all.properties
@@ -2,7 +2,11 @@ server.port=${PORT}
 # Service
 service.enabled=true
 # BFT
-bftsmart.enabled=true
+#bftsmart.enabled=true
+# Blockmess
+blockmess.enabled=true
+# Consensus
+consensus.plane=blockmess
 # Persistence
 persistence.plane=memory
 # Endorser
