Refactor consensus clients logic into common class
Adapt docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       - REPLICA_ID=0
       - PORT=8080
       - SPRING_PROFILES_ACTIVE=service,redis,tls
+      - CONSENSUS=bftsmart
     networks:
       dds-network:
         ipv4_address: 172.26.0.20
@@ -80,6 +81,7 @@ services:
       - REPLICA_ID=1
       - PORT=8081
       - SPRING_PROFILES_ACTIVE=service,redis,tls
+      - CONSENSUS=bftsmart
     networks:
       dds-network:
         ipv4_address: 172.26.0.30
@@ -128,6 +130,7 @@ services:
       - REPLICA_ID=2
       - PORT=8082
       - SPRING_PROFILES_ACTIVE=service,redis,tls
+      - CONSENSUS=bftsmart
     networks:
       dds-network:
         ipv4_address: 172.26.0.40
@@ -176,6 +179,7 @@ services:
       - REPLICA_ID=3
       - PORT=8083
       - SPRING_PROFILES_ACTIVE=service,redis,tls
+      - CONSENSUS=bftsmart
     networks:
       dds-network:
         ipv4_address: 172.26.0.50
