Refactor smart contract verification
Run reformat code

--- a/src/main/resources/application-all.properties
+++ b/src/main/resources/application-all.properties
@@ -2,11 +2,11 @@ server.port=${PORT}
 # Service
 service.enabled=true
 # BFT
-#bftsmart.enabled=true
+bftsmart.enabled=true
 # Blockmess
-blockmess.enabled=true
+#blockmess.enabled=true
 # Consensus
-consensus.plane=blockmess
+consensus.plane=bftsmart
 # Persistence
 persistence.plane=memory
 # Endorser
