--- a/build.gradle
+++ b/build.gradle
@@ -52,9 +52,10 @@ idea {
 	}
 }
 
-task client(type:JavaExec) {
-   mainClass = "com.dds.client.Client"
-   classpath = sourceSets.main.runtimeClasspath
+task interactiveClient(type:JavaExec) {
+	mainClass = "com.dds.client.InteractiveClient"
+	classpath = sourceSets.main.runtimeClasspath
+	standardInput = System.in
 }
 
 task benchmark(type:JavaExec) {
