--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.0'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'java'
+    id 'org.springframework.boot' version '2.7.0'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'java'
 }
 
 group = 'com.dds'
@@ -9,63 +9,81 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
 repositories {
-	mavenCentral()
-	maven {
-		url 'https://maven.scijava.org/content/repositories/public/'
-	}
+    mavenCentral()
+    maven {
+        url 'https://maven.scijava.org/content/repositories/public/'
+    }
 }
 
 tasks.named("jar") {
-	enabled = false
+    enabled = false
 }
 
 dependencies {
-	implementation 'com.github.bft-smart:library:1.2'
-	implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
-	implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	compileOnly 'org.projectlombok:lombok:1.18.24'
-	annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    implementation 'com.github.bft-smart:library:1.2'
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
+    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
-	implementation files("lib/BlockmessLib.jar")
+    implementation files("lib/BlockmessLib.jar")
 
-	// https://mvnrepository.com/artifact/commons-codec/commons-codec
-	implementation 'commons-codec:commons-codec:1.15'
-	// https://mvnrepository.com/artifact/io.netty/netty-all
-	implementation 'site.ycsb:core:0.17.0'
-	implementation 'io.netty:netty-all:4.1.77.Final'
+    // https://mvnrepository.com/artifact/commons-codec/commons-codec
+    implementation 'commons-codec:commons-codec:1.15'
+    // https://mvnrepository.com/artifact/io.netty/netty-all
+    implementation 'io.netty:netty-all:4.1.77.Final'
+
+    implementation 'site.ycsb:core:0.17.0'
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
 
 apply plugin: 'idea'
 
 idea {
-	module {
-		downloadJavadoc = true
-		downloadSources = true
-	}
+    module {
+        downloadJavadoc = true
+        downloadSources = true
+    }
 }
 
-task interactiveClient(type:JavaExec) {
-	mainClass = "com.dds.client.InteractiveClient"
-	classpath = sourceSets.main.runtimeClasspath
-	standardInput = System.in
+task testClient(type: JavaExec) {
+    mainClass = "com.dds.client.Client"
+    classpath = sourceSets.main.runtimeClasspath
+    standardInput = System.in
+    environment "KEYSTORE", "config/keystores/keyStore"
+    environment "KEYSTORE_ALIAS", "dds"
+    environment "KEYSTORE_PW", "ddsdds"
+    environment "ACC_SAVE_FILE", "accData.txt"
+    environment "ENDORSER_URL", "https://localhost:8090"
+    environment "REPLICA_URL", "https://localhost:8081"
+    environment "MAX_ACCS", "4"
 }
 
-task benchmark(type:JavaExec) {
-	mainClass = "site.ycsb.Client"
-	args "-t -db com.dds.client.YCSBClient"
-	classpath = sourceSets.main.runtimeClasspath
+task interactiveClient(type: JavaExec) {
+    mainClass = "com.dds.client.InteractiveClient"
+    classpath = sourceSets.main.runtimeClasspath
+    standardInput = System.in
+    environment "KEYSTORE", "config/keystores/keyStore"
+    environment "KEYSTORE_ALIAS", "dds"
+    environment "KEYSTORE_PW", "ddsdds"
+    environment "ACC_SAVE_FILE", "accData.txt"
+}
+
+task benchmark(type: JavaExec) {
+    mainClass = "site.ycsb.Client"
+    args "-t -db com.dds.client.YCSBClient"
+    classpath = sourceSets.main.runtimeClasspath
 }
 
 tasks.withType(JavaExec) {
     jvmArgs += "-Djavax.net.ssl.trustStore=config/certificates/keystore"
-	jvmArgs += "-Djavax.net.ssl.trustStorePassword=keystorePass"
-	jvmArgs += "-Dhttps.protocols=TLSv1.3"
+    jvmArgs += "-Djavax.net.ssl.trustStorePassword=keystorePass"
+    jvmArgs += "-Dhttps.protocols=TLSv1.3"
 }
