--- a/DockerfileEndorser
+++ b/DockerfileEndorser
@@ -9,6 +9,6 @@ ENV SERVER_KEYSTORE=config/keystores/endorserKeystore SERVER_KEYSTORE_ALIAS=endo
 ENV _JAVA_OPTIONS="-Xms16M -Xmx32M"
 COPY --from=build /home/gradle/src/build/libs/*.jar app.jar
 COPY config config
-COPY config/hosts-docker.config config/hosts.config
+COPY config/hosts-cloud.config config/hosts.config
 RUN rm config/currentView; exit 0
 ENTRYPOINT ["java","-jar","/app.jar"]
