--- a/cloud_deployment/docker-compose-london.yml
+++ b/cloud_deployment/docker-compose-london.yml
@@ -3,6 +3,7 @@ services:
   redis:
     image: redis:6.2-alpine
     container_name: redis
+    command: --port 40379
     network_mode: host
   service:
     image: jc/dds-it-dlp
