Change Blockmess port

--- a/config/config-cloud.properties
+++ b/config/config-cloud.properties
@@ -8,7 +8,7 @@
 # When running this program on containers or in a distributed deployment, use other interfaces.
 ##
 #interface=eth0
-interface=eth0
+interface=ens3
 
 ##
 # The IP address of this node.
@@ -31,7 +31,7 @@ port=6000
 # Ensure that the contact node is initialized before adding other nodes.
 ##
 #contact=192.168.0.10:6000
-contact=54.36.163.65:40010
+contact=54.36.163.65:11000
 
 #### Output
 
